--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.BootsFaces_OSP_1.1.3.classpath}:\
     ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
